feat: add message APIs
