# internal/datastore/entities/message.go
@@ -1,14 +1,32 @@
 package entities
 
-import "github.com/kanthorlabs/common/safe"
+import (
+	"time"
+
+	"github.com/kanthorlabs/common/idx"
+	"github.com/kanthorlabs/common/safe"
+)
 
 type Message struct {
 	Timeseries
 
 	Tier     string
 	AppId    string
-	Type     string
-	Metadata *safe.Metadata
-	Headers  *safe.Metadata
+	Tag      string
 	Body     string
+	Metadata *safe.Metadata
+}
+
+func (entity *Message) SetId() {
+	entity.Id = idx.New(IdNsMsg)
+}
+
+func (entity *Message) TableName() string {
+	return TableMsg
+}
+
+func (entity *Message) SetTimeseries(now time.Time) {
+	if entity.CreatedAt == 0 {
+		entity.CreatedAt = now.UnixMilli()
+	}
 }
